attempt 3 - fixing the mountain image gap -

--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ hr {
 }
 
 .mountain {
-  margin-bottom: -0.3%;
+  vertical-align: bottom;
 }
 
 .top-cloud {
